--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,44 +4,50 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Registration</title>
+    <title th:utext="#{registration.title}"></title>
 </head>
 <body>
+<div style="text-align: right;padding:5px;margin:5px 0px;background:#ccc;">
+    <a th:href="@{/registration?lang=en}">Login (English)</a>
+    &nbsp;|&nbsp;
+    <a th:href="@{/registration?lang=ru}">Login (Russian)</a>
+    &nbsp;|&nbsp;
+</div>
     <div class="container">
         <div class="row">
             <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                 <div class="card border-0 shadow rounded-3 my-5">
                     <div class="card-body p-4 p-sm-5">
-                        <h5 class="card-title text-center mb-5 fw-light fs-5">Create an account</h5>
+                        <h5 class="card-title text-center mb-5 fw-light fs-5" th:utext="#{registration.label}">Create an account</h5>
                         <form action="/registration" method="post">
                             <div class="form-floating mb-3">
                                 <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                                <label for="email">Email</label>
+                                <label for="email" th:utext="#{email}"></label>
                             </div>
                             <div class="form-floating mb-3">
                                 <input type="userName" class="form-control" id="userName" name="userName" placeholder="Username">
-                                <label for="userName">Username</label>
+                                <label for="userName" th:utext="#{userName}"></label>
                             </div>
                             <div class="form-floating mb-3">
                                 <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-                                <label for="password">Password</label>
+                                <label for="password" th:utext="#{password}"></label>
                             </div>
                             <div class="form-floating mb-3">
                                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password">
-                                <label for="confirmPassword">Confirm password</label>
+                                <label for="confirmPassword" th:utext="#{confirmPassword}"></label>
                             </div>
                             <div class="d-grid">
-                                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Create account</button>
+                                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit" th:utext="#{registration.signUpButton}"></button>
                             </div>
                             <hr class="my-4">
                             <div class="d-grid mb-2">
-                                <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-                                    <i class="fab fa-google me-2"></i> Sign in with Google
+                                <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit" th:utext="#{googleSignIn}">
+                                    <i class="fab fa-google me-2"></i>
                                 </button>
                             </div>
                             <div class="d-grid">
-                                <button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
-                                    <i class="fab fa-facebook-f me-2"></i> Sign in with Facebook
+                                <button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit" th:utext="#{facebookSignIn}">
+                                    <i class="fab fa-facebook-f me-2"></i>
                                 </button>
                             </div>
                         </form>
@@ -50,5 +56,14 @@
             </div>
         </div>
     </div>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#locales").change(function () {
+            var selectedOption = $('#locales').val();
+            if (selectedOption != ''){
+                window.location.replace('login?lang=' + selectedOption);
+            }
+        });
+    });
 </body>
 </html>
