created link to user's profile

--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${authUser})}" class="nav-link px-2 text-secondary">Profile</a></li>
+                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>
                 <li><a th:unless="${authentication}" href="/login" class="nav-link px-2 text-secondary">Profile</a></li>
                 <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
