--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -36,11 +36,54 @@
     <div class="col">
 
     </div>
-    <div class="col-8 card" style="background: #e1e3e6">
 
+    <div class="mt-2 col-8 card" style="background: #e1e3e6">
+        <form th:each="post: ${allPosts}">
+            <div class="mt-2 col-md-8">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Author</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary" th:text="post.author.userName">Username</div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Tag</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary" th:text="post.tag">Tag</div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Theme</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary" th:text="post.theme">Theme</div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Topic</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary" th:text="post.body">Title</div>
+                        </div>
+                        <hr>
+                        <!--                            <div class="row">-->
+                        <!--                                <div class="col-sm-12">-->
+                        <!--                                    <form method="post" action="?">-->
+                        <!--                                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Save</button>-->
+                        <!--                                    </form>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
     <div class="col">
-        1
+
     </div>
 </div>
 
