--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -39,8 +39,6 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                                 <div class="mt-3">
                                     <h4 th:text="${username}"></h4>
-                                    <button class="btn btn-primary">Follow</button>
-                                    <button class="btn btn-outline-primary">Message</button>
                                 </div>
                             </div>
                         </div>
@@ -48,7 +46,7 @@
                 </div>
                 <!-- User's info-->
 
-
+                <!-- Create post-->
                 <div class="col-md-8">
                     <form method="post"action="#">
                     <div class="card mb-3">
@@ -85,10 +83,10 @@
                     </div>
                     </form>
                 </div>
-                </div>
+                <!-- Create post-->
 
                 <!-- User's posts-->
-                <form th:each="post: ${posts}">
+                <form th:each="post: ${posts}" method="post">
                 <div class="col-md-8">
                     <div class="card mb-3">
                         <div class="card-body">
@@ -96,7 +94,7 @@
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Tag</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary" th:text="post.tags">
+                                <div class="col-sm-9 text-secondary" th:text="post.tag">
                                     Empty
                                 </div>
                             </div>
@@ -105,32 +103,21 @@
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Theme</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary" th:text="post.theme">
-                                    Empty
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Title</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary" th:text="post.header">
-                                    Empty
-                                </div>
+                                <div class="col-sm-9 text-secondary" th:text="post.theme"></div>
                             </div>
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Topic</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="text" placeholder="text">
-                                </div>
+                                <div class="col-sm-9 text-secondary" th:text="post.body"></div>
                             </div>
                             <hr>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a class="btn btn-info " target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+                                    <form method="post" action="?">
+                                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Save</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
