--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -70,9 +70,10 @@
                                     <h6 class="mb-0">Topic</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="text" name="body">
+                                    <textarea class="form-control" rows="3" name="body"></textarea>
                                 </div>
                             </div>
+
                             <hr>
                             <div class="row">
                                 <div class="col-sm-12">
@@ -128,6 +129,10 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous">
+
+    </script>
 </body>
 </html>
