--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -73,6 +73,16 @@
                                     <textarea class="form-control" rows="3" name="body"></textarea>
                                 </div>
                             </div>
+                            <div class="row">
+                                <form action="/upload" class="dropzone needsclick" id="demo-upload">
+
+                                    <div class="dz-message needsclick">
+                                        <button type="button" class="dz-button">Drop files here or click to upload.</button>
+                                        <br/>
+                                    </div>
+
+                                </form>
+                            </div>
 
                             <hr>
                             <div class="row">
