--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/feedStyle.css">
     <title>feed</title>
 </head>
-<body>
+<body style="background: #e1e3e6">
 <header class="p-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -37,9 +37,9 @@
 
     </div>
 
-    <div class="mt-2 col-8 card" style="background: #e1e3e6">
+    <div class="mt-2 col-8 ">
         <form th:each="post: ${allPosts}">
-            <div class="mt-2 col-md-8">
+            <div class="mt-2 justify-content-center">
                 <div class="card mb-3">
                     <div class="card-body">
                         <div class="row">
