--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title th:text="${username}"></title>
 </head>
-<body>
+<body style="background: #e1e3e6">
     <header class="p-3 bg-dark text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -32,7 +32,7 @@
             <div class="row gutters-sm">
 
                 <!-- User's info-->
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3 mt-3">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
@@ -47,9 +47,9 @@
                 <!-- User's info-->
 
                 <!-- Create post-->
-                <div class="col-md-8">
+                <div class="col-md-8 mt-3">
                     <form method="post"action="#">
-                    <div class="card mb-3">
+                    <div class="card mb-3 card">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-3">
@@ -69,9 +69,7 @@
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Topic</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <textarea class="form-control" rows="3" name="body"></textarea>
-                                </div>
+                                    <textarea class="col-sm-9 text-secondary" rows="3" name="body"></textarea>
                             </div>
                             <div class="row">
                                 <form action="/upload" class="dropzone needsclick" id="demo-upload">
@@ -98,7 +96,7 @@
 
                 <!-- User's posts-->
                 <form th:each="post: ${posts}" method="post">
-                <div class="col-md-8">
+                <div class="justify-content-center">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="row">
