--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -6,88 +6,53 @@
     <link rel="stylesheet" href="../static/feedStyle.css">
     <title>feed</title>
 </head>
-<body>
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>
-                <li><a th:unless="${authentication}" href="/login" class="nav-link px-2 text-secondary">Profile</a></li>
-                <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Games</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Food</a></li>
-            </ul>
-
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-            </form>
-            <div th:if="${authentication}" class="text-end">
-                <a href="/logout"> <button type="button" class="btn btn-warning me-2">Logout</button></a>
-            </div>
-            <div th:unless="${authentication}" class="text-end">
-                <a href="/login"> <button type="button" class="btn btn-outline-light me-2">Login</button></a>
-                <a href="/registration"><button type="button" class="btn btn-warning">Sign-up</button></a>
-            </div>
-        </div>
-    </div>
-</header>
+<body style="background: #e1e3e6">
+<div th:replace="/fragments/header :: header"></div>
 <div class="row">
     <div class="col">
 
     </div>
 
-    <div class="mt-2 col-8 card" style="background: #e1e3e6">
-        <form th:each="post: ${allPosts}">
-            <div class="mt-2 col-md-8">
+    <div class="mt-2 col-8">
+            <div class="mt-2 justify-content-center" th:each="post: ${allPosts}">
                 <div class="card mb-3">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Author</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.author.userName">Username</div>
+                            <div class="col-sm-9 text-secondary" th:text="post.author.userName"></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Tag</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.tag">Tag</div>
+                            <div class="col-sm-9 text-secondary" th:text="post.tag"></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Theme</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.theme">Theme</div>
+                            <div class="col-sm-9 text-secondary" th:text="post.theme"></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Topic</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.body">Title</div>
+                            <div class="col-sm-9 text-secondary" th:text="post.body"></div>
                         </div>
                         <hr>
-                        <!--                            <div class="row">-->
-                        <!--                                <div class="col-sm-12">-->
-                        <!--                                    <form method="post" action="?">-->
-                        <!--                                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Save</button>-->
-                        <!--                                    </form>-->
-                        <!--                                </div>-->
-                        <!--                            </div>-->
                     </div>
                 </div>
             </div>
-        </form>
     </div>
     <div class="col">
 
     </div>
 </div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
