--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <title th:utext="#{login.title}"></title>
 </head>
-<body>
+<body style="background: #e1e3e6">
 <div style="text-align: right;padding:5px;margin:5px 0px;background:#ccc;">
   <a th:href="@{/login?lang=en}">Login (English)</a>
   &nbsp;|&nbsp;
@@ -39,7 +39,7 @@
             </div>
             <hr class="my-4">
             <div class="d-grid mb-2">
-              <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit" th:utext="#{googleSignIn}">
+              <button class="btn btn-google btn-login text-uppercase fw-bold" id="googleAuth" type="submit" th:utext="#{googleSignIn}">
                 <i class="fab fa-google me-2"></i>
               </button>
             </div>
@@ -62,6 +62,12 @@
       }
     });
   });
+</script>
+<script type="text/javascript">
+    document.getElementById("googleAuth").onclick = function () {
+    location.href = "http://localhost:8081/login_googleOAuth2";
+  };
+</script>
 
 </body>
 </html>
