--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,34 +5,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title th:text="${username}"></title>
 </head>
-<body>
-    <header class="p-3 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/login" class="nav-link px-2 text-secondary">Feed</a></li>
-                    <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Games</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Food</a></li>
-                </ul>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                </form>
-
-                <div class="text-end">
-                    <a href="/logout"> <button type="button" class="btn btn-warning me-2">Logout</button></a>
-                </div>
-            </div>
-        </div>
-    </header>
+<body style="background: #e1e3e6">
+    <div th:replace="/fragments/header :: header"></div>
     <div class="container">
         <div class="main-body">
             <div class="row gutters-sm">
 
                 <!-- User's info-->
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3 mt-3">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
@@ -47,8 +28,8 @@
                 <!-- User's info-->
 
                 <!-- Create post-->
-                <div class="col-md-8">
-                    <form method="post"action="#">
+                <div class="col-md-8 mt-3">
+                    <form method="post">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="row">
@@ -97,17 +78,14 @@
                 <!-- Create post-->
 
                 <!-- User's posts-->
-                <form th:each="post: ${posts}" method="post">
-                <div class="col-md-8">
+                <div class="justify-content-center" th:each="post: ${posts}">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Tag</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary" th:text="post.tag">
-                                    Empty
-                                </div>
+                                <div class="col-sm-9 text-secondary" th:text="post.tag"></div>
                             </div>
                             <hr>
                             <div class="row">
@@ -134,7 +112,6 @@
                         </div>
                     </div>
                 </div>
-                </form>
                 <!-- User's posts-->
             </div>
         </div>
