--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title th:utext="#{registration.title}"></title>
 </head>
-<body>
+<body style="background: #e1e3e6">
 <div style="text-align: right;padding:5px;margin:5px 0px;background:#ccc;">
     <a th:href="@{/registration?lang=en}">Login (English)</a>
     &nbsp;|&nbsp;
