--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -11,8 +11,9 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>
-                <li><a th:unless="${authentication}" href="/login" class="nav-link px-2 text-secondary">Profile</a></li>
+                <li><a th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>
+<!--                <li><a th:if="${authentication}" th:href="@{/profile(id=${userId}, username=${username})}" class="nav-link px-2 text-secondary">Profile</a></li>-->
+<!--                <li><a th:unless="${authentication}" href="/login" class="nav-link px-2 text-secondary">Feed</a></li>-->
                 <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Games</a></li>
@@ -44,30 +45,30 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Author</h6>
+                                <h6 class="mb-0 text-secondary">Author</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.author.userName">Username</div>
+                            <div class="col-sm-9" th:text="${post.author.userName}">Username</div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Tag</h6>
+                                <h6 class="mb-0 text-secondary">Tag</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.tag">Tag</div>
+                            <div class="col-sm-9" th:text="${post.tag}">Tag</div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Theme</h6>
+                                <h6 class="mb-0 text-secondary">Theme</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.theme">Theme</div>
+                            <div class="col-sm-9" th:text="${post.theme}">Theme</div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Topic</h6>
+                                <h6 class="mb-0 text-secondary">Topic</h6>
                             </div>
-                            <div class="col-sm-9 text-secondary" th:text="post.body">Title</div>
+                            <div class="col-sm-9" th:text="${post.body}">Title</div>
                         </div>
                         <hr>
                         <!--                            <div class="row">-->
