--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -9,7 +9,26 @@
 </head>
 <body style="background: #e1e3e6">
 
-    <div th:replace="/fragments/header :: header"></div>
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/feed" class="nav-link px-2 text-secondary">Feed</a></li>
+                <li><a href="/admin_panel" class="nav-link px-2 text-white">Admin's tools</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Games</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Food</a></li>
+            </ul>
+
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+            </form>
+            <div class="text-end">
+                <a href="/logout"> <button type="button" class="btn btn-warning me-2">Logout</button></a>
+            </div>
+        </div>
+    </div>
+</header>
     <table class="table table-striped table-bordered"  style="background-color: white">
         <thead>
             <tr>
