--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -32,12 +32,13 @@
     <table class="table table-striped table-bordered"  style="background-color: white">
         <thead>
             <tr>
-                <th scope="col">id</th>
+                <th scope="col-sm">id</th>
                 <th scope="col">Email</th>
                 <th scope="col">Username</th>
                 <th scope="col">Role</th>
                 <th scope="col">State</th>
                 <th scope="col">Link</th>
+                <th scope="col">Tools</th>
             </tr>
         </thead>
         <tbody>
@@ -48,6 +49,11 @@
                 <td th:text="${user.role}">Role</td>
                 <td th:text="${user.state}">State</td>
                 <td><a th:href="@{/profile(id=${user.id}, username=${user.userName})}">Go to profile</a></td>
+                <td>
+                    <a th:href="@{/makeAdmin(id=${user.id})}"> <button type="button" class="btn btn-primary me-2 btn-sm btn-block">Make Admin</button></a><br>
+                    <a th:href="@{/blockUser(id=${user.id})}"> <button type="button" class="btn btn-warning me-2 btn-sm btn-block mt-2">Block</button></a>
+                    <a th:href="@{/deleteUser(id=${user.id})}"> <button type="button" class="btn btn-danger me-2 btn-sm btn-block mt-2">Delete</button></a>
+                </td>
             </tr>
         </tbody>
     </table>
