--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -46,37 +46,60 @@
                                 <h6 class="mb-0 text-secondary">Author</h6>
                             </div>
                             <a class="col-sm-9" th:text="${post.author.userName}"
-                               th:href="@{/profile(id=${post.author.id}, username=${post.author.userName})}">Username</a>
+                               th:href="@{/profile(id=${post.author.id}, username=${post.author.userName})}">
+                            </a>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0 text-secondary">Tag</h6>
                             </div>
-                            <div class="col-sm-9" th:text="${post.tags}">Tag</div>
+                            <div class="col-sm-9" th:text="${post.tags}"></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0 text-secondary">Theme</h6>
                             </div>
-                            <div class="col-sm-9" th:text="${post.theme}">Theme</div>
+                            <div class="col-sm-9" th:text="${post.theme}"></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0 text-secondary">Topic</h6>
                             </div>
-                            <div class="col-sm-9" th:text="${post.body}">Title</div>
+                            <div class="col-sm-9" th:text="${post.body}"></div>
                         </div>
                         <hr>
-                        <!--                            <div class="row">-->
-                        <!--                                <div class="col-sm-12">-->
-                        <!--                                    <form method="post" action="?">-->
-                        <!--                                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Save</button>-->
-                        <!--                                    </form>-->
-                        <!--                                </div>-->
-                        <!--                            </div>-->
+                        <!--  Comments  -->
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Comments</h6>
+                                </div>
+                                <div class="card mb-4 mt-3">
+                                    <div class="card-body">
+                                        <div >
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp"
+                                                 alt="avatar" width="25" height="25"
+                                            />
+                                            <a th:text="${post.author.userName}"
+                                               th:href="@{/profile(id=${post.author.id}, username=${post.author.userName})}">
+                                            </a>
+                                        </div>
+                                        <p class="mt-2">Type your note, and hit enter to add it</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <div class="form-outline mb-4 mt-1">
+                                  <input type="text" id="addANote" class="form-control" placeholder="Type comment..."/>
+                                </div>
+                            </div>
+                        </div>
+                        <!--  Comments  -->
                     </div>
                 </div>
             </div>
@@ -88,6 +111,9 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
