--- a/src/main/resources/templates/postEdit.html
+++ b/src/main/resources/templates/postEdit.html
@@ -36,7 +36,7 @@
             <hr>
             <div class="row">
                 <div class="col-sm-12">
-                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit"
+                        <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit" disabled
                             >Save
                         </button>
                     <a class="btn btn-warning btn-login text-uppercase fw-bold"
