--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -83,9 +83,9 @@
                                             <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp"
                                                  alt="avatar" width="25" height="25"
                                             />
-                                            <a th:text="${post.author.userName}"
-                                               th:href="@{/profile(id=${post.author.id}, username=${post.author.userName})}">
-                                            </a>
+<!--                                            <a th:text="${post.author.userName}"-->
+<!--                                               th:href="@{/profile(id=${post.author.id}, username=${post.author.userName})}">-->
+<!--                                            </a>-->
                                         </div>
                                         <p class="mt-2">Type your note, and hit enter to add it</p>
                                     </div>
